# rust-tap

./: .gitignore  Cargo.toml  README.md
examples/interop-sync/: Cargo.toml
examples/interop-sync/src/: main.rs
examples/interop-verify/: Cargo.toml
examples/interop-verify/src/: main.rs
examples/quickstart/: Cargo.toml  README.md
examples/quickstart/src/: main.rs  state.rs  wallet.rs
interop/: 01-build-binaries.sh  02-start-stack.sh  README.md  env.sh  stop-all.sh  test-a-tapd-mint-rust-verify.sh  test-b-rust-mint-tapd-verify.sh  test-c-universe-sync.sh  test-d-tapd-send-to-rust-addr.sh
tap-grpc/: Cargo.toml  build.rs
tap-grpc/proto/: README.md
tap-grpc/src/: blocking.rs  convert.rs  lib.rs  mailbox.rs  tls.rs  universe_client.rs
tap-grpc/tests/: mailbox_e2e.rs
tap-ldk/: Cargo.toml
tap-ldk/docs/: ldk-fork-requirements.md
tap-ldk/fuzz/: Cargo.toml
tap-ldk/fuzz/fuzz_targets/: aux_signatures_unpack.rs  channel_blob_decode.rs
tap-ldk/src/: config.rs  lib.rs
tap-ldk/src/channel/: allocation.rs  blobs.rs  closer.rs  funding.rs  leaf_creator.rs  leaf_signer.rs  mod.rs  tap_tx_builder.rs  traits.rs
tap-ldk/src/ldk/: mod.rs
tap-ldk/src/rfq/: manager.rs  math.rs  mod.rs
tap-ldk/src/routing/: mod.rs
tap-ldk/src/wire/: compat.rs  messages.rs  mod.rs
tap-ldk/tests/: go_compat_fixtures.rs
tap-node/: Cargo.toml  README.md
tap-node/src/: anchor_codec.rs  builder.rs  config.rs  error.rs  event.rs  lib.rs  lightning.rs  mint.rs  node.rs  receive.rs  send.rs  supply.rs  sync.rs  tasks.rs  types.rs
tap-node/tests/: lifecycle.rs  mint_flow.rs  receive_flow.rs  send_flow.rs  supply_flow.rs  sync_flow.rs
tap-node/tests/common/: mod.rs
tap-onchain/: Cargo.toml
tap-onchain/src/: chain.rs  lib.rs  supply_commit.rs
tap-onchain/src/mint/: batch.rs  mod.rs  planter.rs  seedling.rs
tap-onchain/src/proof/: backoff.rs  courier.rs  exclusion.rs  generate.rs  http_courier.rs  mailbox.rs  merkle.rs  mod.rs  suffix.rs  transition.rs
tap-onchain/src/psbt/: commitment.rs  genesis.rs  mod.rs  transfer.rs
tap-onchain/src/send/: allocation.rs  burn.rs  executor.rs  mod.rs  sign.rs  split_proof.rs  transfer.rs
tap-onchain/tests/: genesis_roundtrip.rs  transfer_proof_roundtrip.rs  transfer_proof_stxo.rs
tap-persist/: Cargo.toml
tap-persist/migrations/: 001_initial.down.sql  001_initial.up.sql  002_universe.up.sql  003_burns.up.sql  004_supply.up.sql  005_mailbox.up.sql  006_asset_keys.up.sql  007_genesis_point.up.sql  008_multi_asset_anchor.up.sql  009_pending_anchors.up.sql  010_address_key_descs.up.sql  011_supply_staging.up.sql
tap-persist/migrations_pg/: 001_initial.up.sql  002_universe.up.sql  003_burns.up.sql  004_supply.up.sql  005_mailbox.up.sql  006_asset_keys.up.sql  007_genesis_point.up.sql  008_multi_asset_anchor.up.sql  009_pending_anchors.up.sql  010_address_key_descs.up.sql  011_supply_staging.up.sql
tap-persist/src/: asset_store.rs  batch_store.rs  ignore_store.rs  lib.rs  mailbox_store.rs  migrations.rs  mssmt_store.rs  pending_anchor_store.rs  proof_store.rs  sqlite.rs  supply_store.rs  testkit.rs  universe_common.rs  universe_store.rs
tap-persist/src/postgres/: asset.rs  batch.rs  ignore.rs  mailbox.rs  migrations.rs  mod.rs  mssmt.rs  pending_anchor.rs  proof.rs  supply.rs  universe.rs
tap-persist/tests/: postgres.rs
tap-primitives/: Cargo.toml
tap-primitives/fuzz/: Cargo.toml
tap-primitives/fuzz/fuzz_targets/: bigsize_decode.rs  proof_file_decode.rs  tapscript_control_block.rs  tlv_stream_decode.rs  var_bytes_decode.rs
tap-primitives/src/: lib.rs
tap-primitives/src/address/: mod.rs
tap-primitives/src/asset/: burn.rs  genesis.rs  group_key.rs  mod.rs  script_key.rs  types.rs  witness.rs
tap-primitives/src/commitment/: asset_commitment.rs  mod.rs  proof.rs  split.rs  tap_commitment.rs  tree.rs
tap-primitives/src/crypto/: derivation.rs  ecies.rs  keys.rs  mod.rs  pedersen.rs  schnorr.rs  tapscript.rs  virtual_tx.rs
tap-primitives/src/encoding/: asset.rs  bigsize.rs  mod.rs  tlv.rs
tap-primitives/src/mssmt/: compacted_tree.rs  mod.rs  node.rs  proof.rs  store.rs  tree.rs
tap-primitives/src/proof/: decode.rs  encode.rs  file.rs  meta.rs  mod.rs  ownership.rs  send_fragment.rs  tx_merkle.rs  tx_proof.rs  types.rs  verify.rs
tap-primitives/src/vm/: mod.rs
tap-primitives/src/vpsbt/: decode.rs  encode.rs  mod.rs  types.rs
tap-primitives/tests/: proptest_encoding.rs  proptest_mssmt.rs  vectors_address.rs  vectors_asset.rs  vectors_asset_leaf.rs  vectors_burn.rs  vectors_mssmt.rs  vectors_proof.rs  vectors_tx_proof.rs  vectors_vpsbt.rs  verify_proofs.rs
tap-primitives/tests/common/: mod.rs
tap-primitives/tests/testdata/: README.md  asset_leaf_go_vectors.json  tx_proof_verify_go_vectors.json
tap-server/: Cargo.toml
tap-server/src/: grpc.rs  json.rs  lib.rs  main.rs  rest.rs  service.rs
tap-server/tests/: grpc_loopback.rs  loopback.rs  rest_api.rs
tap-server/tests/common/: mod.rs
tap-universe/: Cargo.toml
tap-universe/src/: http_client.rs  ignore.rs  lib.rs  memory.rs  smt.rs  syncer.rs  traits.rs  types.rs
tap-universe/src/supply/: events.rs  mod.rs  verifier.rs
tap-universe/tests/: supply_verifier.rs
