[workspace]
members = [
    "tap-primitives",
    "tap-onchain",
    "tap-ldk",
    "tap-persist",
    "tap-universe",
    "tap-node",
    "tap-server",
    "examples/quickstart",
]
exclude = [
    "tap-primitives/fuzz",
    "tap-ldk/fuzz",
]
resolver = "2"

[workspace.lints.rust.unexpected_cfgs]
level = "forbid"
check-cfg = [
    "cfg(fuzzing)",
    "cfg(secp256k1_fuzz)",
    "cfg(hashes_fuzz)",
    "cfg(test)",
    "cfg(debug_assertions)",
    "cfg(c_bindings)",
    "cfg(ldk_bench)",
    "cfg(ldk_test_vectors)",
    "cfg(require_route_graph_test)",
    "cfg(simple_close)",
    "cfg(peer_storage)",
    "cfg(tor)",
]
