[package]
name = "tap-grpc"
version = "0.1.0"
edition = "2021"
description = "gRPC transports for Taproot Assets (tapd universerpc/authmailboxrpc interop)"

[dependencies]
# tonic 0.13 / prost 0.13 are pinned as a known-good pair for the
# vendored tapd protos (tonic 0.12 predates the tonic-build protoc
# fixes we rely on; tonic 0.14 splits codegen into tonic-prost and
# changes the generated API surface).
tonic = { version = "0.13", features = ["tls-ring"] }
# (The `tls-ring` feature is for the SERVER side: tap-server uses
# tonic's ServerTlsConfig so tapd's universe-RPC proof courier, which
# always dials TLS with certificate verification disabled, can
# deliver proofs to it. The CLIENT side does not use tonic's TLS:)
# TLS support for dialing a real tapd, whose gRPC listener is always
# TLS with an lnd-style self-signed certificate. Those certs carry
# CA:TRUE, which webpki rejects as an end-entity cert, so instead of
# tonic's stock `tls-ring` path the client pins the exact certificate
# with a custom rustls verifier over a manual tokio-rustls connector.
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
rustls-pemfile = "2"
hyper-util = { version = "0.1", features = ["tokio"] }
tower = { version = "0.5", default-features = false, features = ["util"] }
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync"] }
tokio-stream = "0.1"
bitcoin_hashes = { version = "0.14", default-features = false, features = ["std"] }
tap-primitives = { path = "../tap-primitives" }
tap-universe = { path = "../tap-universe", default-features = false }
tap-onchain = { path = "../tap-onchain", default-features = false }

[build-dependencies]
tonic-build = "0.13"
prost-build = "0.13"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
tokio-stream = { version = "0.1", features = ["net"] }
secp256k1 = { version = "0.29", default-features = false, features = ["std", "global-context"] }
bitcoin = { version = "0.32", default-features = false, features = ["std"] }
tap-primitives = { path = "../tap-primitives", features = ["test-utils"] }
