[package]
name = "tap-onchain"
version = "0.1.0"
edition = "2021"
description = "On-chain minting and transfer pipelines for Taproot Assets"

[dependencies]
tap-primitives = { path = "../tap-primitives" }
bitcoin = { version = "0.32", default-features = false, features = ["std"] }
bitcoin_hashes = { version = "0.14", default-features = false, features = ["std"] }
secp256k1 = { version = "0.29", default-features = false, features = ["std", "global-context"] }
getrandom = "0.2"
ureq = { version = "2", optional = true }

[features]
default = ["http-courier"]
http-courier = ["ureq"]
