[package]
name = "tap-primitives"
version = "0.1.0"
edition = "2021"
description = "Core primitives for the Taproot Assets Protocol"

[dependencies]
bech32 = "0.11"
bitcoin = { version = "0.32", default-features = false, features = ["std", "secp-recovery"] }
bitcoin_hashes = { version = "0.14", default-features = false, features = ["std"] }
secp256k1 = { version = "0.29", default-features = false, features = ["std", "global-context"] }
serde_json = "1"
# ECIES (Go internal/ecies): XChaCha20-Poly1305 AEAD + HKDF-SHA256.
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
hkdf = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }
getrandom = "0.2"

[dev-dependencies]
base64 = "0.22"
hex = "0.4"
proptest = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
test-utils = []

# Enable test-utils for integration tests
[dev-dependencies.tap-primitives]
path = "."
features = ["test-utils"]
