[package]
name = "tap-primitives"
version = "0.1.0"
edition = "2021"
description = "Core primitives for the Taproot Assets Protocol"

[dependencies]
bech32 = "0.11"
bitcoin = { version = "0.32", default-features = false, features = ["std", "secp-recovery"] }
bitcoin_hashes = { version = "0.14", default-features = false, features = ["std"] }
secp256k1 = { version = "0.29", default-features = false, features = ["std", "global-context"] }
serde_json = "1"
# Unicode general category tables, needed to match Go's
# unicode.IsPrint for asset name validation.
unicode-general-category = "1"
# ECIES (Go internal/ecies): XChaCha20-Poly1305 AEAD + HKDF-SHA256.
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
hkdf = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }
getrandom = "0.2"
# Full tapscript execution for script-path witness validation (Go runs
# btcd's txscript engine; we run Bitcoin Core's libbitcoinconsensus).
#
# NOTE: this is deliberately a direct dependency instead of the bitcoin
# crate's `bitcoinconsensus` feature: bitcoin 0.32 pins bitcoinconsensus
# 0.105.0+25.1 (Core 25.1), which has no taproot support (no
# VERIFY_TAPROOT flag and no spent-outputs API), and its safe wrapper
# cannot pass the prevouts required by BIP-341 signature hashing.
# bitcoinconsensus 0.106.0+26.0 (Core 26.0) adds
# `verify_script_with_spent_outputs` + VERIFY_TAPROOT.
bitcoinconsensus = { version = "0.106.0", optional = true, default-features = false, features = ["std"] }

[dev-dependencies]
base64 = "0.22"
hex = "0.4"
proptest = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# consensus-validation is on by default for Go parity: Go's VM always
# executes script-path witnesses through the full txscript engine
# (taproot-assets vm/vm.go validateWitnessV0).
default = ["consensus-validation"]
test-utils = []
# Executes script-path (tapscript) witnesses with Bitcoin Core's
# libbitcoinconsensus (builds the C++ sources; requires a C++
# toolchain). Without this feature, script-path spends are rejected
# with a clear error while key-path spends are verified natively.
consensus-validation = ["dep:bitcoinconsensus"]

# Enable test-utils for integration tests
[dev-dependencies.tap-primitives]
path = "."
features = ["test-utils"]
